--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="drop-area">
-        <input style="display: none;" type="file" id="inputFile" />
+        <input style="display: none;" type="file" id="inputFile"/>
         <label for="inputFile" id="inputFile">Выберите файл&nbsp;</label>
         <p>или перетащите его сюда</p>
     </div>
@@ -19,14 +19,14 @@
         <p>Тип файла: <span class="seleted-file-type">-</span></p>
         <p>Размер файла: <span class="seleted-file-size">-</span></p>
         <div class="filters">
-            <input type="text" id="fileType" placeholder="Фильтр по типу: image/png, text/plain">
+            <input type="text" id="fileType" placeholder='Фильтр по типу: png, text, html'>
             <input type="number" id="numberValue" placeholder="Фильтр по размеру (Кбайт)">
             <input type="submit" id="submit" value="Применить фильтр">
         </div>
         <div class="file-list">
-            <div class="file-list_txt" style="display: flex; justify-content: space-between;">
+            <div class="file-list_txt">
                 <h3>Список файлов:</h3>
-                <button id="updateList" style="margin: 15px;">Обновить список</button>
+                <button id="updateList">Обновить список</button>
             </div>
             <ul></ul>
         </div>
